// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CallListItem renders Declined without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <a
        class="rcx-box rcx-box--full rcx-sidebar-item rcx-sidebar-item--level-1"
        href="/conference/refused"
      >
        <div
          class="rcx-box rcx-box--full rcx-sidebar-item__col"
        >
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__title"
            >
              Design review
            </div>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__timestamp"
            >
              Aug 3rd
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__subtitle"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1p4sjp4"
              >
                3 people joined
              </div>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1p4sjp4"
            >
              (
              Declined
              )
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders Joinable without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <a
        class="rcx-box rcx-box--full rcx-sidebar-item rcx-sidebar-item--level-1"
        href="/conference/standup"
      >
        <div
          class="rcx-box rcx-box--full rcx-sidebar-item__col"
        >
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__title"
            >
              Daily standup
            </div>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__timestamp"
            >
              Aug 3rd
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__subtitle"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1p4sjp4"
              >
                4 people joined
              </div>
            </div>
            <button
              aria-label="Decline"
              class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
              title="Decline"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-1tg7yd0"
              >
                
              </i>
            </button>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders Joined without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <a
        class="rcx-box rcx-box--full rcx-sidebar-item rcx-sidebar-item--level-1"
        href="/conference/joined"
      >
        <div
          class="rcx-box rcx-box--full rcx-sidebar-item__col"
        >
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__title"
            >
              Pairing session
            </div>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__timestamp"
            >
              Aug 3rd
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__subtitle"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1p4sjp4"
              >
                2 people joined
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders Ringing without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <a
        class="rcx-box rcx-box--full rcx-sidebar-item rcx-sidebar-item--level-1"
        href="/conference/ringing"
      >
        <div
          class="rcx-box rcx-box--full rcx-sidebar-item__col"
        >
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__title"
            >
              Ada Lovelace
            </div>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__timestamp"
            >
              <span
                class="rcx-box rcx-box--full rcx-css-18wfy10"
              >
                Ringing
                …
              </span>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__subtitle"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1p4sjp4"
              >
                1 person joined
              </div>
            </div>
            <button
              aria-label="Silence"
              class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
              title="Silence"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-bell-off rcx-icon rcx-css-1tg7yd0"
              >
                
              </i>
            </button>
            <button
              aria-label="Decline"
              class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
              title="Decline"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-1tg7yd0"
              >
                
              </i>
            </button>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders RingingButDeclined without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <a
        class="rcx-box rcx-box--full rcx-sidebar-item rcx-sidebar-item--level-1"
        href="/conference/refused"
      >
        <div
          class="rcx-box rcx-box--full rcx-sidebar-item__col"
        >
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__title"
            >
              Design review
            </div>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__timestamp"
            >
              Aug 3rd
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__subtitle"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1p4sjp4"
              >
                2 people joined
              </div>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-css-1p4sjp4"
            >
              (
              Declined
              )
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders RingingButJoined without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <a
        class="rcx-box rcx-box--full rcx-sidebar-item rcx-sidebar-item--level-1"
        href="/conference/answered"
      >
        <div
          class="rcx-box rcx-box--full rcx-sidebar-item__col"
        >
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__title"
            >
              Standup
            </div>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__timestamp"
            >
              Aug 3rd
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__subtitle"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1p4sjp4"
              >
                2 people joined
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders RingingNotHeardHere without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <a
        class="rcx-box rcx-box--full rcx-sidebar-item rcx-sidebar-item--level-1"
        href="/conference/ringing"
      >
        <div
          class="rcx-box rcx-box--full rcx-sidebar-item__col"
        >
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__title"
            >
              Ada Lovelace
            </div>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__timestamp"
            >
              <span
                class="rcx-box rcx-box--full rcx-css-18wfy10"
              >
                Ringing
                …
              </span>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__subtitle"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1p4sjp4"
              >
                1 person joined
              </div>
            </div>
            <button
              aria-label="Decline"
              class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
              title="Decline"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-1tg7yd0"
              >
                
              </i>
            </button>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders RingingSilenced without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <a
        class="rcx-box rcx-box--full rcx-sidebar-item rcx-sidebar-item--level-1"
        href="/conference/ringing"
      >
        <div
          class="rcx-box rcx-box--full rcx-sidebar-item__col"
        >
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__title"
            >
              Ada Lovelace
            </div>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__timestamp"
            >
              <span
                class="rcx-box rcx-box--full rcx-css-18wfy10"
              >
                Ringing
                …
              </span>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__subtitle"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1p4sjp4"
              >
                1 person joined
              </div>
            </div>
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-bell-off rcx-icon rcx-css-z80ug6"
              title="Incoming call, silenced"
            >
              
            </i>
            <button
              aria-label="Decline"
              class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
              title="Decline"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-1tg7yd0"
              >
                
              </i>
            </button>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders SinglePerson without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <a
        class="rcx-box rcx-box--full rcx-sidebar-item rcx-sidebar-item--level-1"
        href="/conference/alone"
      >
        <div
          class="rcx-box rcx-box--full rcx-sidebar-item__col"
        >
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__title"
            >
              Ada Lovelace
            </div>
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__timestamp"
            >
              Aug 3rd
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-sidebar-item__row"
          >
            <div
              class="rcx-box rcx-box--full rcx-sidebar-item__subtitle"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1p4sjp4"
              >
                1 person joined
              </div>
            </div>
            <button
              aria-label="Decline"
              class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
              title="Decline"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-1tg7yd0"
              >
                
              </i>
            </button>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;
